force-app/main/default/objects/Participant_Workflow_Picklist_Value__mdt/Participant_Workflow_Picklist_Value__mdt.object-meta.xml
<CustomObject>
    <label>Participant Workflow Picklist Value</label>
    <pluralLabel>Participant Workflow Picklist Values</pluralLabel>
</CustomObject>