force-app/main/default/objects/Participant_Workflow_Picklist_Value__mdt/fields/Available_Condition__c.field-meta.xml
<CustomField>
    <fullName>Available_Condition__c</fullName>
    <label>Available Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>