force-app/main/default/objects/Participant_Workflow_Picklist_Value__mdt/fields/Participant_Workflow_Form_Field__c.field-meta.xml
<CustomField>
    <fullName>Participant_Workflow_Form_Field__c</fullName>
    <label>Participant Workflow Form Field</label>
    <referenceTo>Participant_Workflow_Form_Field__mdt</referenceTo>
    <relationshipLabel>Participant Workflow Picklist Values</relationshipLabel>
    <relationshipName>Participant_Workflow_Picklist_Values</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>