force-app/main/default/objects/Participant_Workflow_Picklist_Value__mdt/fields/Selected_Condition__c.field-meta.xml
<CustomField>
    <fullName>Selected_Condition__c</fullName>
    <label>Selected Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>