force-app/main/default/objects/Participant_Workflow_Picklist_Value__mdt/fields/Update_Fields_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Update_Fields_Mapping__c</fullName>
    <label>Update Fields Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>